--- a/examples/ex_r3bpFamily_halo_Earth_Moon.ipynb
+++ b/examples/ex_r3bpFamily_halo_Earth_Moon.ipynb
@@ -536,7 +536,7 @@
    "source": [
     "# save output\n",
     "flename = \"l2_halo_southern_test.json\"\n",
-    "pathjson = '../data/r3bp/EarthMoon/' + flename\n",
+    "pathjson = '../data/r3bp/Earth_Moon/' + flename\n",
     "famdf.to_json(pathjson, orient='index', indent=4, double_precision=15)\n",
     "\n",
     "print(f'Done! Saved at {pathjson}')"
